--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,9 @@ spring.datasource.hikari.maxLifetime=1800000
 
 #?????????????????????
 spring.jpa.open-in-view=false
-#spring.jpa.show-sql: true
+spring.jpa.show-sql: true
+
+
+#firstTime run -> create
+#nextTime can change to update
+spring.jpa.hibernate.ddl-auto=update
