--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,6 +5,7 @@ spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.hikari.maxLifetime=1800000
 
 #?????????????????????
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.open-in-view=false
 spring.jpa.show-sql: true
 
